--- a/cic2025/call-for-full-papers/index.html
+++ b/cic2025/call-for-full-papers/index.html
@@ -27,51 +27,55 @@ title: "Call for Full Papers pages"
             <!-- End Navbar -->
         </div>
         <!--=== End Header ===-->
-        <div class="breadcrumbs">
-            <div class="container">
-                <h1 class="pull-left">Call For Papers</h1>
-                <ul class="pull-right breadcrumb">
-                    <li><a href="{{ site.baseurl }}/">Home</a></li>
-                    <li><a href="">Submit</a></li>
-                    <li class="active">Call For Papers</li>
-                </ul>
-            </div>
-        </div>
+        
 
         <div class="bg-color-light">
-            <div class="container content-xs">
-                <div class="news-v3 margin-bottom-30">
-                    {% include banner.html %}
+
+            <div class="news-v3 margin-bottom-30">
+                {% include banner.html %}
+            </div>
+            <div class="breadcrumbs">
+                <div class="container">
+                    <h1 class="pull-left">Call For Papers</h1>
+                    <ul class="pull-right breadcrumb">
+                        <li><a href="{{ site.baseurl }}/">Home</a></li>
+                        <li><a href="">Submit</a></li>
+                        <li class="active">Call For Papers</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
                     <!-- Contents goes here -->
-                    <div class="news-v3-in">
+                    <div class="col-md-8"><!-- outter container  -->
+                        <div class="news-v3-in">
 
-                        <h2 class="margin-bottom-5" style="margin-bottom: 0">
-                            <strong>IEEE CIC 2025 Call for Papers</strong>
-                        </h2>
+                            <h2 class="margin-bottom-5" style="margin-bottom: 0">
+                                <strong>IEEE CogMI 2025 Call for Papers</strong>
+                            </h2>
 
-                        <h4 class="margin-bottom-5"><strong>Important dates:</strong></h4>
+                            <h4 class="margin-bottom-5"><strong>Important dates:</strong></h4>
 
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <h4 style="color: brown;">Round 1 Submission Dates:</h4>
-                                <ul class="list-group">
-                                    <li class="list-group-item list-group-item-info">Time Zone
-                                        <span class="badge">Anywhere on Earth</span>
-                                    </li>
-                                    <li class="list-group-item list-group-item-warning">Submission Deadline
-                                        <span class="badge">June 21, 2025</span>
-                                    </li>
-                                    <li class="list-group-item list-group-item-success">Notification of Acceptance
-                                        Date
-                                        <span class="badge">July 21, 2025</span>
-                                    </li>
-                                    <!-- <li class="list-group-item list-group-item-info">Camera Ready Due
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h4 style="color: brown;">Round 1 Submission Dates:</h4>
+                                    <ul class="list-group">
+                                        <li class="list-group-item list-group-item-info">Time Zone
+                                            <span class="badge">Anywhere on Earth</span>
+                                        </li>
+                                        <li class="list-group-item list-group-item-warning">Submission Deadline
+                                            <span class="badge">June 21, 2025</span>
+                                        </li>
+                                        <li class="list-group-item list-group-item-success">Notification of Acceptance
+                                            Date
+                                            <span class="badge">July 21, 2025</span>
+                                        </li>
+                                        <!-- <li class="list-group-item list-group-item-info">Camera Ready Due
                                             <span class="badge">TBD</span>
                                         </li> -->
-                                </ul>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
-
 
                         <p>The Internet and AI have revolutionized the globalized society and enabled the growth of
                             infrastructures, applications, and technologies that significantly enhance global
@@ -409,15 +413,20 @@ title: "Call for Full Papers pages"
                         <h3><strong>Program Co-Chairs</strong></h3>
                         <ul>
                             <li>Barbara Carminati, University of Insubria, Italy</li>
-                            <li>Haibing Lu, Amazon, Santa Clara University, USA</li>
+                            <li>Haibing Lu, Santa Clara University, USA</li>
                             <li>Wenqi Wei, Fordham University, USA</li>
                         </ul>
+                        <div style="height: 30px; clear: both;"></div>
                     </div>
+                </div>
+                <!-- right panel begins -->
+                <div>
+                    {% include sidebar1.html %}
                 </div>
             </div>
         </div>
-        <!--/end container-->
     </div>
+
     <!--=== End Content ===-->
 
 
