--- a/cic2025/steerings/index.html
+++ b/cic2025/steerings/index.html
@@ -10,105 +10,121 @@ title: "blank"
 <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!-->
 <html lang="en"> <!--<![endif]-->
+
 <head>
     <title>IEEE CIC 2025</title>
     {% include head.html %}
+
 </head>
 
 <body class="header-fixed">
-    <div class="wrapper" style="min-height: 800px">
+
+    <div class="wrapper">
         <!--=== Header===-->
         <div class="header-v3">
-            <div class="container"></div>
+            <!-- <div class="container"></div> -->
             <!-- Navbar -->
             {% include navbar.html %}
             <!-- End Navbar -->
         </div>
-        <!--=== End Header ===-->
-        <div class="breadcrumbs">
-            <div class="container">
-                <h1 class="pull-left">Steering Commmittees</h1>
-                <ul class="pull-right breadcrumb">
-                    <li><a href="{{ site.baseurl }}/">Home</a></li>
-                    <!-- <li><a href="">BLANK</a></li> -->
-                    <li class="active">Steering</li>
-                </ul>
-            </div>
-        </div>
 
 
 
-    <div class="bg-color-light">
-        <div class="container content-xs">
+
+
+
+        <div class="bg-color-light">
             <div class="news-v3 margin-bottom-30">
                 {% include banner.html %}
-                <!-- Contents goes here -->
-                <div class="news-v3-in">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <ul class="no-padding margin-left-10 organizers-type-list hidden-xs" id="sidebar-nav">
-                                <!-- Typography -->
+            </div>
+            <!--=== End Header ===-->
+            <div class="breadcrumbs">
+                <div class="container">
+                    <h1 class="pull-left">Steering Commmittees</h1>
+                    <ul class="pull-right breadcrumb">
+                        <li><a href="{{ site.baseurl }}/">Home</a></li>
+                        <li class="active">Sterring</li>
+                    </ul>
+                </div>
+            </div>
 
-                                <li class=""><a href="#General">Chair</a></li>
-                                <li class=""><a href="#Members">Members</a></li>
-                                <!-- <li class=""><a href="#Program">Program Co-Chairs</a></li>
-                                <li class=""><a href="#ShortPaperProgram">Blue-Sky/ Vision Track Co-Chairs</a></li>
-                                <li class=""><a href="#BestPaper">Industry/Government Co-Chairs</a></li>
-                                <li class=""><a href="#TestofTimeAward">Tutorial Co-Chairs</a></li>
-                                <li class=""><a href="#Industry">Sponsorship Co-Chairs</a></li>
-                                <li class=""><a href="#SummerSchool">Workshop Co-Chairs</a></li>
-                                <li class=""><a href="#Publicity">Finance and Local Arrangements Chairs</a></li>
-                                <li class=""><a href="#DoctoralConsortium">Proceedings Chair</a></li>
-                                <li class=""><a href="#Workshop">Publicity Chairs</a></li>
-                                <li class=""><a href="#DemonstrationPaper">Web Co-Chairs</a></li> -->
-                            </ul>
-                        </div>
-                        <div class="col-md-9">
-                            <div id="organizers">
 
-                                <h2>Steering Committees</h2>
-                                <h4 id="General">Chair</h4>
-                                <ul>
-                                    <li >
-                                        <i>James Joshi, University of Pittsburgh, USA</i>
-                                    </li>
-                                </ul>
+            <div class="container">
+                <div class="row">
+                    <!-- Contents goes here -->
+                    <div class="col-md-9"><!-- outter container  -->
+                        <div class="news-v3-in">
+                            <div class="row">
+                                <!-- <div class="col-md-3">
+                                    <ul class="no-padding margin-left-10 organizers-type-list hidden-xs"
+                                        id="sidebar-nav">
+                                        
 
-                                <h4 id="General">Members</h4>
-                                <ul>
-                                    <li >
-                                        <i>Arun Iyengar, Cisco, USA</i>
-                                    </li>
-                                    <li >
-                                        <i>Calton Pu, Georgia Institute of Technology, USA</i>
-                                    </li>
-                                    <li >
-                                        <i>Dimitrios Gerogakopolous, Swinsburne University of Technology, Australia</i>
-                                    </li>
-                                    <li >
-                                        <i>Elisa Bertino, Purdue University, USA</i>
-                                    </li>
-                                    <li >
-                                        <i>Karl Aberer, EPFL, Switzerland</i>
-                                    </li>
-                                    <li >
-                                        <i>Ling Liu, Georgia Institute of Technology, USA</i>
-                                    </li>
-                                    <li >
-                                        <i>M. Brian Blake, President of Georgia State University, USA</i>
-                                    </li>
-                                    <li >
-                                        <i>Tao Zhang, NIST, USA</i>
-                                    </li>
-                                    <li >
-                                        <i>Weisong Shi, University of Delaware, USA</i>
-                                    </li>
-                                    <li >
-                                        <i>Zhaohui Wu, Zhejiang University, China</i>
-                                    </li>
+                                        <li class=""><a href="#General">Executive Chairs of the Co-located
+                                                Conferences</a>
+                                        </li>
+                                        <li class=""><a href="#Vice">General Co-Chairs</a></li>
+                                        <li class=""><a href="#Program">Program Co-Chairs</a></li>
+                                        <li class=""><a href="#ShortPaperProgram">Blue-Sky/ Vision Track
+                                                Co-Chairs</a>
+                                        </li>
+                                        <li class=""><a href="#BestPaper">Industry/Government Co-Chairs</a></li>
+                                        <li class=""><a href="#TestofTimeAward">Tutorial Co-Chairs</a></li>
+                                        <li class=""><a href="#Industry">Sponsorship Co-Chairs</a></li>
+                                        <li class=""><a href="#SummerSchool">Workshop Co-Chairs</a></li>
+                                        <li class=""><a href="#Publicity">Finance and Local Arrangements Chairs</a>
+                                        </li>
+                                        <li class=""><a href="#DoctoralConsortium">Proceedings Chairs</a></li>
+                                        <li class=""><a href="#Workshop">Publicity Chairs</a></li>
+                                        <li class=""><a href="#DemonstrationPaper">Web Co-Chairs</a></li>
+                                    </ul>
+                                </div> -->
+                                <div class="col-md-12">
+                                    <div id="organizers">
 
-                                </ul>
-                                <!-- <h4 id="Program">Program co-Chairs</h4>
+                                        <h4 id="General">Chair</h4>
+                                        <ul>
+                                            <li>
+                                                <i>James Joshi, University of Pittsburgh, USA</i>
+                                            </li>
+                                        </ul>
+
+                                        <h4 id="General">Members</h4>
+                                        <ul>
+                                            <li>
+                                                <i>Arun Iyengar, Cisco, USA</i>
+                                            </li>
+                                            <li>
+                                                <i>Calton Pu, Georgia Institute of Technology, USA</i>
+                                            </li>
+                                            <li>
+                                                <i>Dimitrios Gerogakopolous, Swinsburne University of Technology,
+                                                    Australia</i>
+                                            </li>
+                                            <li>
+                                                <i>Elisa Bertino, Purdue University, USA</i>
+                                            </li>
+                                            <li>
+                                                <i>Karl Aberer, EPFL, Switzerland</i>
+                                            </li>
+                                            <li>
+                                                <i>Ling Liu, Georgia Institute of Technology, USA</i>
+                                            </li>
+                                            <li>
+                                                <i>M. Brian Blake, President of Georgia State University, USA</i>
+                                            </li>
+                                            <li>
+                                                <i>Tao Zhang, NIST, USA</i>
+                                            </li>
+                                            <li>
+                                                <i>Weisong Shi, University of Delaware, USA</i>
+                                            </li>
+                                            <li>
+                                                <i>Zhaohui Wu, Zhejiang University, China</i>
+                                            </li>
+
+                                        </ul>
+                                        <!-- <h4 id="Program">Program co-Chairs</h4>
                                 <ul>
                                     <li class="person-card">
                                         <div>
@@ -326,26 +342,37 @@ title: "blank"
                                         </div>
                                     </li>
                                 </ul> -->
-                                <div style="height: 30px; clear: both;"></div>
-                                                               
+                                        <div style="height: 30px; clear: both;"></div>
+
+
+                                    </div>
+
+                                </div>
 
                             </div>
+
                         </div>
+
+                    </div>
+
+                    <!-- right panel begins -->
+                    <div>
+                        {% include sidebar.html %}
                     </div>
                 </div>
-    </div>
-</div>
-<!--=== End Content ===-->
 
+                <!-- end  -->
+            </div>
 
-<!--=== Footer ===-->
-{% include footer.html %}
-<!--=== End Footer ===-->
-</div>
+            <!--=== Footer ===-->
+            {% include footer.html %}
+            <!--=== End Footer ===-->
+        </div>
 
-<!--=== Scripts ===-->
-{% include scripts.html %}
-<!--=== End scripts ===-->
+        <!--=== Scripts ===-->
+        {% include scripts.html %}
+        <!--=== End scripts ===-->
 
 </body>
+
 </html>
